@@ -1,7 +1,7 @@
 #
 # Make.inc.in	Common Makefile stuff for the cistron-radius package.
 #
-# Version:	@(#)Makefile.inc.in  1.00 01-Jul-1999  miquels@cistron.nl
+# Version:	$Id$
 #
 
 # Location of files.
