@@ -4,12 +4,11 @@
 #		NOTE: This top-level Makefile must not
 #		use GNU-make extensions. The lower ones can.
 #
-# Version:	@(#)Makefile  1.10 21-Aug-1999  miquels@cistron.nl
+# Version:	$Id$
 #
 
-@INCLUDE@ @IQUOTE@Make.inc@IQUOTE@
+include Make.inc
 
-MAKE		= @MAKE@
 SUBDIRS		= src raddb doc scripts
 WHAT_TO_MAKE	= all
 
