@@ -8,6 +8,9 @@ config.h - created by autoconf; contains defines generated by autoconf
 
 @TOP@
 
+/* Do we have the crypt function ? */
+#undef HAVE_CRYPT
+
 /* Do we have shadow support? */
 #undef HAVE_GETSPNAM
 
