@@ -11,6 +11,9 @@ config.h - created by autoconf; contains defines generated by autoconf
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
 
+/* Do we have the crypt function ? */
+#undef HAVE_CRYPT
+
 /* Do we have socklen_t? */
 #undef HAVE_SOCKLEN_T
 
@@ -88,3 +91,6 @@ config.h - created by autoconf; contains defines generated by autoconf
 
 /* Define if you have the <sys/select.h> header file.  */
 #undef HAVE_SYS_SELECT_H
+
+/* Define if you have the <utmp.h> header file.  */
+#undef HAVE_UTMP_H
